# unzipandro

./: LICENSE.txt  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/cod5/unzipandro/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.c
app/src/main/cpp/hwzip/: Makefile  README  android.c  benchmarks.c  bits_test.c  bitstream_test.c  build.bat  crc32_test.c  deflate.c  deflate.h  deflate_bench.c  deflate_fuzzer.c  deflate_test.c  expand_fuzzer.c  explode_fuzzer.c  folder.c  folder.h  generate_tables.c  huffman.c  huffman_bench.c  huffman_decode_fuzzer.c  huffman_encode_fuzzer.c  huffman_test.c  hwzip.c  hwzip_test.sh  implode.c  implode_bench.c  implode_fuzzer.c  implode_test.c  inflate_fuzzer.c  lz77_bench.c  lz77_test.c  macos.sh  reduce.c  reduce_bench.c  reduce_fuzzer.c  reduce_test.c  shrink_bench.c  shrink_fuzzer.c  shrink_test.c  (+12 more)
app/src/main/java/com/cod5/unzipandro/: MainActivity.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cod5/unzipandro/: ExampleUnitTest.java
doc/: description.txt
